--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
+
+lib_deps = 
+    me-no-dev/AsyncTCP@^1.1.1
+    me-no-dev/ESP Async WebServer@^1.2.4
+    arduino-libraries/NTPClient@^3.2.1
