--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,7 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
-extra_scripts = extra_scripts.py
-build_flags = 
-    -DCORE_DEBUG_LEVEL = 5
+board_build.filesystem = LittleFS 
 lib_deps = 
     me-no-dev/AsyncTCP@^1.1.1
     me-no-dev/ESP Async WebServer@^1.2.4
