--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,9 @@ lib_deps =
     me-no-dev/ESP Async WebServer@^1.2.4
     arduino-libraries/NTPClient@^3.2.1
     LittleFS
+
+; change microcontroller
+board_build.mcu = esp32
+
+; change MCU frequency
+board_build.f_cpu = 240000000L
