--- a/platformio.ini
+++ b/platformio.ini
@@ -20,8 +20,5 @@ lib_deps =
     arduino-libraries/NTPClient@^3.2.1
     LittleFS
 
-; change microcontroller
-board_build.mcu = esp32
-
-; change MCU frequency
-board_build.f_cpu = 240000000L
+monitor_rts = 0
+monitor_dtr = 0
