--- a/platformio.ini
+++ b/platformio.ini
@@ -12,13 +12,12 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-monitor_speed = 115200
-board_build.filesystem = LittleFS 
+monitor_speed = 115200 
+upload_speed = 921600
 lib_deps = 
     me-no-dev/AsyncTCP@^1.1.1
     me-no-dev/ESP Async WebServer@^1.2.4
     arduino-libraries/NTPClient@^3.2.1
-    LittleFS
 
 monitor_rts = 0
 monitor_dtr = 0
