--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,8 @@ lib_deps =
     me-no-dev/AsyncTCP@^1.1.1
     me-no-dev/ESP Async WebServer@^1.2.4
     arduino-libraries/NTPClient@^3.2.1
-
+    tzapu/WiFiManager@^2.0.17
+    DNSServer
+    ESPmDNS
 monitor_rts = 0
 monitor_dtr = 0
